# MarkView

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/plans/: 2026-02-10-markview-design.md  2026-02-10-markview-implementation-plan.md  2026-02-11-new-features-design.md  2026-02-11-new-features-plan.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  error.rs  git.rs  images.rs  lib.rs  search.rs  utils.rs  watcher.rs  wiki.rs
src/components/: AIPanel.svelte  BacklinksPanel.svelte  Breadcrumb.svelte  CommandPalette.svelte  CustomCssEditor.svelte  DiagramEditor.svelte  DiagramViewer.svelte  DiffView.svelte  Editor.svelte  EmojiPicker.svelte  ExportMenu.svelte  FileTree.svelte  GitPanel.svelte  GraphView.svelte  ImageGallery.svelte  MarkdownToolbar.svelte  MermaidEditor.svelte  MindMapView.svelte  PluginManager.svelte  PresentationMode.svelte  Preview.svelte  RecentFiles.svelte  SearchPanel.svelte  SettingsPanel.svelte  SnippetMenu.svelte  StatusBar.svelte  TableEditor.svelte  Tabs.svelte  TemplateModal.svelte  ThemePicker.svelte  Toast.svelte  TocPanel.svelte  Toolbar.svelte
src/lib/: ai-provider.ts  autocomplete.ts  builtin-plugins.ts  custom-css.svelte.ts  diagram-templates.ts  docx-export.ts  export.ts  focus-mode.ts  graph.ts  image-manager.ts  inline-images.ts  markdown-fold.ts  markdown.ts  mindmap.ts  minimap.ts  plugins.svelte.ts  recent-files.svelte.ts  settings.svelte.ts  spellcheck.ts  templates.ts  theme.ts  themes.ts  toast.svelte.ts  types.ts  watcher.ts  (+1 more)
(+10 files in other folders)
