[package]
name = "markview"
version = "0.1.0"
description = "Markdown viewer and editor with Mermaid support"
authors = ["you"]
edition = "2021"

[lib]
name = "markview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
regex = "1"
thiserror = "1"
once_cell = "1"

